# program-agent

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  analyzer.py  ingest.py  install.sh  requirements.txt  run_collector.sh  run_crawler.sh  server.py  신규-프로젝트-시작-가이드.md
agents/: app-porter.md  coder.md  tester.md  (+1 more)
projects/stock-backtest/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
projects/stock-backtest/backend/: alembic.ini  requirements.txt
projects/stock-backtest/backend/alembic/: README.md  env.py
projects/stock-backtest/backend/app/: __init__.py  dependencies.py  main.py
projects/stock-backtest/backend/scripts/: seed_catalog.py  smoke_e2e.py  smoke_imports.py
projects/stock-backtest/backend/tests/: conftest.py
projects/stock-backtest/config/: defaults.yaml
projects/stock-backtest/docker/cron/: crontab.example
projects/stock-backtest/docker/initdb/: 001_extensions.sql
projects/stock-backtest/docs/: cron.md  openapi.yaml
projects/stock-backtest/frontend/: next.config.mjs  package-lock.json  package.json  vitest.config.ts
projects/stock-backtest/migrations/: env.py
projects/stock-backtest/scripts/: seed_market_events.py  seed_universe.py  seed_usd_cash.py  smoke_cash_position.py  smoke_fx_trade.py
projects/stock-backtest/tests/: test_calendar_guard.py  test_engine_cushion.py  test_engine_regression.py  test_engine_smoke.py  test_ingestion_e2e.py  test_ingestion_pipeline.py  test_performance.py  test_portfolio_fx.py  test_run_store.py  test_seasonality_stats.py  test_tax.py
(+1231 files in other folders)
